# SZHBooks

./: .gitignore  CMakeLists.txt  Main.qml  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  documentloadresult.h  documentreaders.cpp  localdocumentloader.cpp  main.cpp  readercontroller.cpp  readercontroller.h
.github/workflows/: windows-ci.yml
archive/: ziparchivewriter.cpp  ziparchivewriter.h
cmake/: verify_install.cmake
cmake/application/: CMakeLists.txt
docs/: DESIGN_RESEARCH.md
document/: documentlimits.h
localization/: localizationcontroller.cpp  localizationcontroller.h
notes/: NotesCenterDialog.qml
packaging/: release-manifest.json.in
packaging/portable/: portable.flag
platform/: applicationinfoservice.cpp  applicationinfoservice.h  applicationpaths.cpp  applicationpaths.h
reader/: AnnotationsPopup.qml  ChapterNavigationPopup.qml  EmptyReaderView.qml  PageNavigationControl.qml  PdfDocumentView.qml  ReaderSidebar.qml  ReaderWorkspace.qml  SearchPopup.qml  TextDocumentView.qml  TextNavigationControl.qml  readingannotation.h  readingsearchcontroller.cpp  readingsearchcontroller.h
search/: LibrarySearchDialog.qml  librarysearchindex.cpp  librarysearchindex.h  librarysearchmodel.cpp  librarysearchmodel.h
shell/: AboutDialog.qml  AppHeader.qml  AppShortcuts.qml  ApplicationMenuPopup.qml  ProfileRestoreDialog.qml  ReaderStatusBar.qml  ReaderToolsPopup.qml  ReadingSettingsPopup.qml
storage/: documentstoragekey.cpp  documentstoragekey.h  localstatestore.cpp  localstatestore.h  profilearchiveservice.cpp  profilearchiveservice.h  profiledatabase.cpp  profiledatabase.h  profilestorage.h  readingannotationstore.cpp  readingannotationstore.h
sync/: onedrivelibraryservice.cpp  onedrivelibraryservice.h  portableprofilemapper.cpp  profilesyncengine.cpp  profilesyncengine.h  syncactivitymodel.cpp  syncactivitymodel.h  syncconflictmodel.cpp  syncconflictmodel.h
tests/: applicationpathstest.cpp  documentreaderstest.cpp  libraryfileservicetest.cpp  librarysearchindextest.cpp  libraryservicestest.cpp  localizationcontrollertest.cpp  localstatestoretest.cpp  onedrivesynctest.cpp  profilearchiveservicetest.cpp  qmltestmain.cpp  readingfeaturestest.cpp
tests/qml/: tst_controls.qml
translations/: SZHBooks_ru.ts
ui/: SZHBrandLogo.qml  SZHButton.qml  SZHCheckBox.qml  SZHIconButton.qml  SZHMenuButton.qml  SZHNotification.qml  SZHProgressBar.qml  SZHScrollBar.qml  SZHSegmentedControl.qml  SZHSlider.qml  SZHSurface.qml  SZHSwitch.qml  SZHTextArea.qml  SZHTextField.qml  Theme.qml
